# cubbit-horcrux

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
common/: args.hpp  args_parser.hpp  client.hpp  dataformat.hpp  horcrux_management.hpp  management.hpp  request.hpp  server.hpp
common/include/: engine.hpp
horcrux/: args.hpp  client.hpp  dataformat.hpp  endpoint.hpp  request.hpp  server.hpp
server/: CMakeLists.txt  horcrux_server.hpp  main.cpp
